feat(context-enhance): The use of context provides a method for getLast to retrieve the last message